--- a/Ezyfood_project/app/src/main/res/values/strings.xml
+++ b/Ezyfood_project/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="mart_3">Mart 03</string>
 
     <string name="close_app">Close application</string>
-
+    <string name="main">Main</string>
     <string name="ezy1">Mart 01</string>
     <string name="ezy2">Mart 02</string>
     <string name="ezy3">Mart 03</string>
